fixed icon spacing

--- a/src/style.css
+++ b/src/style.css
@@ -51,9 +51,9 @@ main {
   display: flex;
 }
 .weather-app-icon {
-  height: 48px;
-  width: 48px;
-  margin-top: 30px;
+  height: 88px;
+  width: 88px;
+  margin-top: 10px;
 }
 .weather-app-temperature {
   font-size: 88px;
